[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgeo"
version = "0.4.0"
description = "fgeo — Generative Engine Optimization CLI. AI-powered content asset management and multi-platform distribution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MarvinTalk" }]
keywords = ["geo", "seo", "ai", "content", "cli", "agent"]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
ai = ["litellm>=1.0.0"]
publish = ["playwright>=1.40.0", "httpx>=0.27.0"]

[project.scripts]
fgeo = "fgeo.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
